[package]
name = "drinks-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive", "env"] }
env_logger = "0.11.1"
futures = "0.3.28"
log = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.169", features = ["derive"] }
sqlx = { version = "0.7.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1.29.1", features = ["rt", "macros"] }
urlencoding = "2.1.2"
